# nDn-Dice

./: .gitignore  LICENCE  README.md  discordDice.py  nDnDICE.py  pyproject.toml
src/nDnDICE/: __init__.py  __main__.py  discordDice.py  nDnDICE.py
tests/: test_nDnDICE.py
