[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nDnDICE"
authors = [
    {name = "Deize", email = "morisi3160@gmail.com"},
]
description = "ダイスを振れるよ"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Deize1659/nDn-Dice"
"Bug Tracker" = "https://github.com/akaness1git/nDn-Dice/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "nDnDICE._version.__version__"}

[tool.setuptools_scm]
write_to = "src/nDnDICE/_version.py"
